samples/_failures_safe/1761546983_57beda_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4244f48d.c: In function ‘main’:
./samples/SAFE/__tmp_4244f48d.c:125:9: error: expected expression at end of input
  125 |         printf("Log entry %d: ",
      |         ^~~~~~
./samples/SAFE/__tmp_4244f48d.c:125:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4244f48d.c:125:9: error: expected declaration or statement at end of input
